--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/firestore": "^2.3.7",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -14,6 +15,7 @@
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "d3": "^6.5.0",
+    "firebase": "^8.6.8",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
